--- a/app/templates/ember_widgets/color_picker.hbs
+++ b/app/templates/ember_widgets/color_picker.hbs
@@ -5,9 +5,7 @@
       <p class="elevated">Color Picker.</p>
     </div>
     <div class="col-md-12">
-        {{view Ember.Widgets.ColorPicker usePopOver=false}}
-        <div>foo</div>
-        {{view Ember.Widgets.ColorPicker usePopOver=true}}
+      {{view Ember.Widgets.ColorPicker}}
     </div>
   </div>
 </div>
