--- a/src/templates/color_picker.hbs
+++ b/src/templates/color_picker.hbs
@@ -1,7 +1,20 @@
-{{view Ember.Widgets.ColorPickerSelectedCell
-  colorBinding='view.selectedColor'
-  classNames='selected-cell color-picker-cell'
-}}
-{{#unless view.usePopOver}}
-  {{view Ember.Widgets.ColorPickerPalette}}
-{{/unless}}
+<div class="dropdown">
+  <a id="dLabel" role="button" data-toggle="dropdown" data-target="#" href="/page.html">
+    {{view Ember.Widgets.ColorPickerSelectedCell
+      colorBinding='selectedColor'
+      classNames='selected-cell color-picker-cell'
+    }}
+  </a>
+  <div class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+    {{#each row in colorRows}}
+      <div class="color-row">
+        {{#each color in row}}
+          {{view Ember.Widgets.ColorPickerSelectionCell
+            colorBinding ='color'
+            classNames='color-picker-cell'
+           }}
+        {{/each}}
+      </div>
+    {{/each}}
+  </div>
+</div>
